--- a/front-end/html/reg/reg.html
+++ b/front-end/html/reg/reg.html
@@ -32,15 +32,14 @@
                 </el-form-item>
                 <el-button id="next" name="next" @click="next">next</el-button>
             </el-form>
-            <el-form id="code" name="code" hidden>
+            <el-form id="codeForm" name="codeForm" hidden>
                 <el-form-item label="yanzhengma">
                     <el-input v-model="code" name="code" id="code" placeholder="code"/>
                 </el-form-item>
                 <el-button id="reg" name="reg" @click="reg">reg</el-button>
             </el-form>
-        </dev>
-        <script type="text/javascript" src="../js/code.js">
-        </script>
+        </div>
+        <script type="text/javascript" src="../js/code.js"></script>
     </body>
 
     <!-- import Vue before Element -->
@@ -63,7 +62,7 @@
             methods: {
                 next() {
                     $("#info").hide()
-                    $("#code").show()
+                    $("#codeForm").show()
                 },
                 reg() {
                     axios.post('http://127.0.0.1:8080/reg', params('mobileNo',this.mobile_no,'password',this.password,'nickname',this.nickname,'code',this.code,'email',this.email))
